--- a/index.html
+++ b/index.html
@@ -43,11 +43,18 @@
 
     <div class="settings_box">
         <ul class="setting_list">
-            <li class="settings_item"></li>
-            <li class="settings_item"></li>
-            <li class="settings_item"></li>
+            <li class="settings_item item_hover" data-item="item1"></li>
+            <li class="settings_item item_hover" data-item="item2"></li>
+            <li class="settings_item item_click"></li>
         </ul>
+
+        <div class="settings_hover">
+            <ul class="hover_list">
+            </ul>
+        </div>
     </div>
+
+    
 
 <!-- scripts -->
 
