--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
     </header>
 
 
-
-
     <div class="settings">
-        <img src="./images/cog.svg" alt="settings" srcset="">
+        <img class="settings_btn" src="./images/cog.svg" alt="settings" srcset="">
     </div>
 
     <div class="settings_box">
@@ -55,6 +53,141 @@
     </div>
 
     
+
+    <div class="game">
+
+        <div class="tabela">
+            <table>
+                <tr class="users">
+                    <td></td>
+                    <td class="user-1 user"  data-user="1">Gracz #1</td>
+                    <td class="user-2 user"  data-user="2">Gracz #2</td>
+                    <td class="user-3 user"  data-user="3">Gracz #3</td>
+                    <td class="user-4 user"  data-user="4">Gracz #4</td>
+                </tr>
+                <tr>
+                    <td>jedynki</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>dwójki</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>trójki</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>czwórki</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>piątki</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>szóstki</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>suma</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>trzy jednakowe</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>cztery jednakowe</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>full</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>mały strit</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>duży strit</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>generał</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>szansa</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>suma</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>razem</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="gracze">
+
+        </div>
+
+    </div>
+
+
+
 
 <!-- scripts -->
 
