--- a/index.html
+++ b/index.html
@@ -59,128 +59,178 @@
         <div class="tabela">
             <table>
                 <tr class="users">
-                    <td></td>
+                    <td class="empty"></td>
                     <td class="user-1 user"  data-user="1">Gracz #1</td>
                     <td class="user-2 user"  data-user="2">Gracz #2</td>
                     <td class="user-3 user"  data-user="3">Gracz #3</td>
                     <td class="user-4 user"  data-user="4">Gracz #4</td>
                 </tr>
-                <tr>
+                <tr class="jedynki">
                     <td>jedynki</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="points" data-cat="jedynka" data-player="1"></td>
+                    <td class="points" data-cat="jedynka" data-player="2"></td>
+                    <td class="points" data-cat="jedynka" data-player="3"></td>
+                    <td class="points" data-cat="jedynka" data-player="4"></td>
                 </tr>
-                <tr>
+                <tr class="dwojki">
                     <td>dwójki</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="points" data-cat="dwojki" data-player="1"></td>
+                    <td class="points" data-cat="dwojki" data-player="2"></td>
+                    <td class="points" data-cat="dwojki" data-player="3"></td>
+                    <td class="points" data-cat="dwojki" data-player="4"></td>
                 </tr>
-                <tr>
+                <tr class="trojki">
                     <td>trójki</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="points" data-cat="trojki" data-player="1"></td>
+                    <td class="points" data-cat="trojki" data-player="2"></td>
+                    <td class="points" data-cat="trojki" data-player="3"></td>
+                    <td class="points" data-cat="trojki" data-player="4"></td>
                 </tr>
-                <tr>
+                <tr class="czworki">
                     <td>czwórki</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="points" data-cat="czworki" data-player="1"></td>
+                    <td class="points" data-cat="czworki" data-player="2"></td>
+                    <td class="points" data-cat="czworki" data-player="3"></td>
+                    <td class="points" data-cat="czworki" data-player="4"></td>
                 </tr>
-                <tr>
+                <tr class="piatki">
                     <td>piątki</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="points" data-cat="piatka" data-player="1"></td>
+                    <td class="points" data-cat="piatka" data-player="2"></td>
+                    <td class="points" data-cat="piatka" data-player="3"></td>
+                    <td class="points" data-cat="piatka" data-player="4"></td>
                 </tr>
-                <tr>
+                <tr class="szostki">
                     <td>szóstki</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="points" data-cat="szostka" data-player="1"></td>
+                    <td class="points" data-cat="szostka" data-player="2"></td>
+                    <td class="points" data-cat="szostka" data-player="3"></td>
+                    <td class="points" data-cat="szostka" data-player="4"></td>
                 </tr>
-                <tr>
+                <tr class="sumax1">
                     <td>suma</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="sumax1" data-cat="sumax1" data-player="1"></td>
+                    <td class="sumax1" data-cat="sumax1" data-player="2"></td>
+                    <td class="sumax1" data-cat="sumax1" data-player="3"></td>
+                    <td class="sumax1" data-cat="sumax1" data-player="4"></td>
                 </tr>
-                <tr>
+                <tr class="3x">
                     <td>trzy jednakowe</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="points" data-cat="3x" data-player="1"></td>
+                    <td class="points" data-cat="3x" data-player="2"></td>
+                    <td class="points" data-cat="3x" data-player="3"></td>
+                    <td class="points" data-cat="3x" data-player="4"></td>
                 </tr>
-                <tr>
+                <tr class="4x">
                     <td>cztery jednakowe</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="points" data-cat="4x" data-player="1"></td>
+                    <td class="points" data-cat="4x" data-player="2"></td>
+                    <td class="points" data-cat="4x" data-player="3"></td>
+                    <td class="points" data-cat="4x" data-player="4"></td>
                 </tr>
-                <tr>
+                <tr class="full">
                     <td>full</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="points" data-cat="full" data-player="1"></td>
+                    <td class="points" data-cat="full" data-player="2"></td>
+                    <td class="points" data-cat="full" data-player="3"></td>
+                    <td class="points" data-cat="full" data-player="4"></td>
                 </tr>
-                <tr>
+                <tr class="maly">
                     <td>mały strit</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="points" data-cat="maly" data-player="1"></td>
+                    <td class="points" data-cat="maly" data-player="2"></td>
+                    <td class="points" data-cat="maly" data-player="3"></td>
+                    <td class="points" data-cat="maly" data-player="4"></td>
                 </tr>
-                <tr>
+                <tr class="duzy">
                     <td>duży strit</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="points" data-cat="duzy" data-player="1"></td>
+                    <td class="points" data-cat="duzy" data-player="2"></td>
+                    <td class="points" data-cat="duzy" data-player="3"></td>
+                    <td class="points" data-cat="duzy" data-player="4"></td>
                 </tr>
-                <tr>
+                <tr class="general">
                     <td>generał</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="points" data-cat="general" data-player="1"></td>
+                    <td class="points" data-cat="general" data-player="2"></td>
+                    <td class="points" data-cat="general" data-player="3"></td>
+                    <td class="points" data-cat="general" data-player="4"></td>
                 </tr>
-                <tr>
+                <tr class="szansa">
                     <td>szansa</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="points" data-cat="szansa" data-player="1"></td>
+                    <td class="points" data-cat="szansa" data-player="2"></td>
+                    <td class="points" data-cat="szansa" data-player="3"></td>
+                    <td class="points" data-cat="szansa" data-player="4"></td>
                 </tr>
-                <tr>
+                <tr class="sumax2">
                     <td>suma</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="sumax2" data-cat="sumax2" data-player="1"></td>
+                    <td class="sumax2" data-cat="sumax2" data-player="2"></td>
+                    <td class="sumax2" data-cat="sumax2" data-player="3"></td>
+                    <td class="sumax2" data-cat="sumax2" data-player="4"></td>
                 </tr>
-                <tr>
+                <tr class="razem">
                     <td>razem</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="razem" data-cat="razem" data-player="1"></td>
+                    <td class="razem" data-cat="razem" data-player="2"></td>
+                    <td class="razem" data-cat="razem" data-player="3"></td>
+                    <td class="razem" data-cat="razem" data-player="4"></td>
                 </tr>
             </table>
         </div>
 
         <div class="gracze">
+
+            <div class="game_btn">
+                <button class="btn_start">GRAJ</button>
+            </div>
+
+            <div class="user_1">
+                <div class="kostki kostki_user_1">
+                    <div class="kostka kostka_1 kostka_1_user_1" data-kostka="1">
+                        <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
+                        <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
+                        <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
+                        <img class="kostka_side kostka_4_side" src="./images/four.svg" alt="kostka side">
+                        <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
+                        <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
+                    </div>
+                    <div class="kostka kostka_2 kostka_2_user_1" data-kostka="2">
+                        <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
+                        <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
+                        <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
+                        <img class="kostka_side kostka_4_side" src="./images/four.svg" alt="kostka side">
+                        <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
+                        <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
+                    </div>
+                    <div class="kostka kostka_3 kostka_3_user_1" data-kostka="3">
+                        <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
+                        <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
+                        <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
+                        <img class="kostka_side kostka_4_side" src="./images/four.svg" alt="kostka side">
+                        <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
+                        <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
+                    </div>
+                    <div class="kostka kostka_4 kostka_4_user_1" data-kostka="4">
+                        <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
+                        <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
+                        <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
+                        <img class="kostka_side kostka_4_side" src="./images/four.svg" alt="kostka side">
+                        <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
+                        <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
+                    </div>
+                    <div class="kostka kostka_5 kostka_5_user_1" data-kostka="5">
+                        <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
+                        <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
+                        <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
+                        <img class="kostka_side kostka_4_side" src="./images/four.svg" alt="kostka side">
+                        <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
+                        <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
+                    </div>
+                </div>
+            </div>
+
 
         </div>
 
