--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <button class="btn_start">GRAJ</button>
             </div>
 
-            <div class="user_1">
+            <div class="user_1" data-user="1">
                 <div class="kostki kostki_user_1">
                     <div class="kostka kostka_1 kostka_1_user_1" data-kostka="1">
                         <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
