--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                 </tr>
                 <tr class="jedynki">
                     <td>jedynki</td>
-                    <td class="points" data-cat="jedynka" data-player="1"></td>
-                    <td class="points" data-cat="jedynka" data-player="2"></td>
-                    <td class="points" data-cat="jedynka" data-player="3"></td>
-                    <td class="points" data-cat="jedynka" data-player="4"></td>
+                    <td class="points" data-cat="jedynki" data-player="1"></td>
+                    <td class="points" data-cat="jedynki" data-player="2"></td>
+                    <td class="points" data-cat="jedynki" data-player="3"></td>
+                    <td class="points" data-cat="jedynki" data-player="4"></td>
                 </tr>
                 <tr class="dwojki">
                     <td>dwójki</td>
@@ -95,17 +95,17 @@
                 </tr>
                 <tr class="piatki">
                     <td>piątki</td>
-                    <td class="points" data-cat="piatka" data-player="1"></td>
-                    <td class="points" data-cat="piatka" data-player="2"></td>
-                    <td class="points" data-cat="piatka" data-player="3"></td>
-                    <td class="points" data-cat="piatka" data-player="4"></td>
+                    <td class="points" data-cat="piatki" data-player="1"></td>
+                    <td class="points" data-cat="piatki" data-player="2"></td>
+                    <td class="points" data-cat="piatki" data-player="3"></td>
+                    <td class="points" data-cat="piatki" data-player="4"></td>
                 </tr>
                 <tr class="szostki">
                     <td>szóstki</td>
-                    <td class="points" data-cat="szostka" data-player="1"></td>
-                    <td class="points" data-cat="szostka" data-player="2"></td>
-                    <td class="points" data-cat="szostka" data-player="3"></td>
-                    <td class="points" data-cat="szostka" data-player="4"></td>
+                    <td class="points" data-cat="szostki" data-player="1"></td>
+                    <td class="points" data-cat="szostki" data-player="2"></td>
+                    <td class="points" data-cat="szostki" data-player="3"></td>
+                    <td class="points" data-cat="szostki" data-player="4"></td>
                 </tr>
                 <tr class="sumax1">
                     <td>suma</td>
@@ -116,17 +116,17 @@
                 </tr>
                 <tr class="3x">
                     <td>trzy jednakowe</td>
-                    <td class="points" data-cat="3x" data-player="1"></td>
-                    <td class="points" data-cat="3x" data-player="2"></td>
-                    <td class="points" data-cat="3x" data-player="3"></td>
-                    <td class="points" data-cat="3x" data-player="4"></td>
+                    <td class="points" data-cat="trzyx" data-player="1"></td>
+                    <td class="points" data-cat="trzyx" data-player="2"></td>
+                    <td class="points" data-cat="trzyx" data-player="3"></td>
+                    <td class="points" data-cat="trzyx" data-player="4"></td>
                 </tr>
                 <tr class="4x">
                     <td>cztery jednakowe</td>
-                    <td class="points" data-cat="4x" data-player="1"></td>
-                    <td class="points" data-cat="4x" data-player="2"></td>
-                    <td class="points" data-cat="4x" data-player="3"></td>
-                    <td class="points" data-cat="4x" data-player="4"></td>
+                    <td class="points" data-cat="czteryx" data-player="1"></td>
+                    <td class="points" data-cat="czteryx" data-player="2"></td>
+                    <td class="points" data-cat="czteryx" data-player="3"></td>
+                    <td class="points" data-cat="czteryx" data-player="4"></td>
                 </tr>
                 <tr class="full">
                     <td>full</td>
@@ -221,6 +221,50 @@
                         <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
                     </div>
                     <div class="kostka kostka_5 kostka_5_user_1" data-kostka="5">
+                        <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
+                        <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
+                        <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
+                        <img class="kostka_side kostka_4_side" src="./images/four.svg" alt="kostka side">
+                        <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
+                        <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
+                    </div>
+                </div>
+            </div>
+            <div class="user_2" data-user="2">
+                <div class="kostki kostki_user_2">
+                    <div class="kostka kostka_1 kostka_1_user_2" data-kostka="1">
+                        <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
+                        <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
+                        <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
+                        <img class="kostka_side kostka_4_side" src="./images/four.svg" alt="kostka side">
+                        <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
+                        <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
+                    </div>
+                    <div class="kostka kostka_2 kostka_2_user_2" data-kostka="2">
+                        <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
+                        <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
+                        <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
+                        <img class="kostka_side kostka_4_side" src="./images/four.svg" alt="kostka side">
+                        <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
+                        <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
+                    </div>
+                    <div class="kostka kostka_3 kostka_3_user_2" data-kostka="3">
+                        <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
+                        <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
+                        <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
+                        <img class="kostka_side kostka_4_side" src="./images/four.svg" alt="kostka side">
+                        <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
+                        <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
+                    </div>
+                    <div class="kostka kostka_4 kostka_4_user_2" data-kostka="4">
+                        <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
+                        <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
+                        <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
+                        <img class="kostka_side kostka_4_side" src="./images/four.svg" alt="kostka side">
+                        <img class="kostka_side kostka_5_side" src="./images/five.svg" alt="kostka side">
+                        <img class="kostka_side kostka_6_side" src="./images/six.svg" alt="kostka side">
+                    </div>
+                    <div class="kostka kostka_5 kostka_5_user_2" data-kostka="5">
                         <img class="kostka_side kostka_1_side" src="./images/one.svg" alt="kostka side">
                         <img class="kostka_side kostka_2_side" src="./images/two.svg" alt="kostka side">
                         <img class="kostka_side kostka_3_side" src="./images/three.svg" alt="kostka side">
